improve statement of LEFT

--- a/finite.tex
+++ b/finite.tex
@@ -922,7 +922,7 @@ Having accomplished all our major goals, we close our algebraic analysis of \(\m
 
 With our analysis of \(\moduli{fg}\) complete, our first goal in this Lecture is to finish the program sketched in the introduction to this Case Study by manufacturing those interesting homology theories connected to the functor \(\context{MU}(-)\).  We begin by rephrasing our main tool, \Cref{LandwebersStackyTheorem}, in terms of algebraic conditions.
 \begin{theorem}[{Landweber Exact Functor Theorem, \cite[Corollary 2.7]{LandweberHomologicalComodules}, \cite[Lecture 16]{LurieChromaticCourseNotes}, and \cite[Theorem 21.4 and Proposition 21.5]{HopkinsCOCTALOS}}]
-Let \(\sheaf F\) be a \index{sheaf!quasicoherent}quasicoherent sheaf over \(\moduli{fg} \times \Spec \Z_{(p)}\), thought of as a \index{comodule}comodule \(M\) for the Kudo--Araki Hopf algebroid (cf.\ \Cref{KudoArakiIsomorphism}) \[(A, \Gamma) = (\sheaf O_{\moduli{fgl}^{\ptyp}}, \sheaf O_{\moduli{fgl}^{\ptyp}}[t_1, t_2, \ldots]).\]  If \((p, v_1, \ldots, v_d, \ldots)\) forms an infinite regular sequence on \(M\), then \[X \mapsto M \otimes_{\sheaf O_{\moduli{fgl}^{\ptyp}}} MUP_0(X)\] determines a homology theory.
+Let \(\sheaf F\) be a \index{sheaf!quasicoherent}quasicoherent sheaf over \(\moduli{fg} \times \Spec \Z_{(p)}\), thought of as a \index{comodule}comodule \(M\) for the Hopf algebroid \[(A, \Gamma) = (\sheaf O_{\moduli{fgl}}, \sheaf O_{\moduli{fgl}}[t_1, t_2, \ldots]).\]  Using the Kudo--Araki map of \Cref{KudoArakiIsomorphism}, we can define the action of the infinite sequence \((p, v_1, \ldots, v_d, \ldots)\) on \(M\).  If this sequence is regular, then \[X \mapsto M \otimes_{\sheaf O_{\moduli{fgl}}} MUP_0(X)\] determines a homology theory.
 \label{LEFTRealTheoremWithProof}
 \end{theorem}
 \begin{proof}
