fix a unicity claim in A.3

--- a/powerops.tex
+++ b/powerops.tex
@@ -536,11 +536,11 @@ A \index{sheaf!infty sheaf@\(\infty\)--sheaf}\textit{\(\CatOf{D}\)--valued sheaf
 Let \(f\co \stack N \to \moduli{fg}\) be a flat, representable morphism of stacks.  A \index{stack!topological enrichment}\textit{topological enrichment} of \(\stack N\) is a sheaf of \(E_\infty\)--ring spectra \(\sheaf O\) on \(\stack N\) such that\footnote{In particular, \(\pi_0 \sheaf O\) recovers the structure sheaf of \(\stack N\).} \[(\pi_n \circ \sheaf O)(\text{\(U \subseteq \stack N\), affine and open}) \cong \begin{cases} (f^* \omega^{\otimes k})|_U & \text{if \(n = 2k\) is even}, \\ 0 & \text{if \(n\) is odd}. \end{cases}\]  Fix a fixed map \(f\co \stack N \to \moduli{fg}\), this has its own associated moduli problem of topological enrichments of \(f\).
 \end{definition}
 
-Our goal, then, is to outline the proof of the following theorem:
-
 \begin{theorem}[{Goerss--Hopkins--Miller~\cite{HopkinsMiller,GoerssHopkins}; Behrens~\cite[Theorem 1.1]{BehrensConstruction}; Lurie~\cite{LurieSurveyOfEll}}]\label{UniqueTopEnrichmentOfMell}
-The moduli of topological enrichments of \(\moduli{ell}\), the \index{elliptic curve!moduli}moduli of elliptic curves equipped with the \'etale topology, is nonempty.
+The moduli of topological enrichments of \(\moduli{ell}\), the \index{elliptic curve!moduli}moduli of elliptic curves equipped with the \'etale topology, is connected.
 \end{theorem}
+
+\noindent We now outline the weaker result that the moduli of enrichments is \emph{nonempty}.
 
 
 
@@ -707,16 +707,16 @@ This comes down to \index{algebraization}\textit{algebraization}: in certain cas
 Such a theorem appears here when studying the homotopy ring of \(\widehat L_1 E_{\widehat C}\), which can be calculated to be \[\pi_0 \widehat L_1 E_{\widehat C} = (\pi_0 E_{\widehat C})[u_1^{-1}]^\wedge_p,\] which is no longer easily viewed as the ring of functions on a formal scheme.  However, if the classifying map \(\Spec \pi_0 E_{\widehat C} \to \moduli{ell}\) is first algebraized, these operations of localization and completion can be performed on ordinary affine schemes.  This has its own wrinkle: algebraization is hard to understand, for one, but we are also briefly obligated to replace \(X = \moduli{ell}\) by a certain compactified moduli \(Y = \overline{\moduli{ell}}\) of cubic curves with nodal singularities allowed.
 \end{proof}
 
-\noindent This specification of a map \(\Spf ((V^\wedge_\infty)^{\ss}) \to \moduli{ell}\) gives two candidates for a \(\theta\)--algebra structure on the \(p\)--adic \(K\)--theory of \(\TMF^{\ss}\): there is the \(\theta\)--algebra structure coming from transfer of structure along the map of schemes, and there is the \(\theta\)--algebra structure coming from the shear fact that \((\TMF^{\ss})^{\ord}\) is an \(E_\infty\)--ring spectrum, and hence topology simply imbues it with such algebraic structure.
+\noindent This specification of a map \(\Spf ((V^\wedge_\infty)^{\ss}) \to \moduli{ell}\) gives two candidates for a \(\theta\)--algebra structure on the \(p\)--adic \(K\)--theory of \(\TMF^{\ss}\): there is one coming from transfer of structure along the map of schemes, and there is one coming from the shear fact that \((\TMF^{\ss})^{\ord}\) is an \(E_\infty\)--ring spectrum, and hence topology simply imbues it with such algebraic structure.
 
 \begin{theorem}[{\cite[Theorem 6.10]{BehrensConstruction}}]
 The natural \(\theta\)--algebra structure on \(\Spf ((V^\wedge_\infty)^{\ss})\) induced by the map \(\Spf ((V^\wedge_\infty)^{\ss}) \to \Spf V^\wedge_\infty\) agrees with the Goerss--Hopkins--Miller \(\theta\)--algebra structure on \(K_p (\TMF^{\ss})\). \qed
 \end{theorem}
 
-\noindent This is to be read as a recognition theorem for the \(\theta\)--algebra structure on the topological object \((\TMF^{\ss})^{\ord}\): it matches the algebraic model.  Once this is established, the Goerss--Hopkins--Miller obstructions can be shown to vanish after introducing a suitable level structure; it follows that the above map lifts to a \((\Z/p)^{\times}\)--equivariant map of the \(E_\infty\)--rings of the global sections over the moduli with level structure; this descends to a map of global sections over the original module after taking \((\Z/p)^\times\)--fixed points; and one finally produces the map of sheaves by further applications of relative obstruction theory~\cite[Section 8, Step 2]{BehrensConstruction}.
+\noindent This is to be read as a recognition theorem for the \(\theta\)--algebra structure on the topological object \((\TMF^{\ss})^{\ord}\): it matches the algebraic model.  Once this is established, the Goerss--Hopkins--Miller obstructions to \emph{existence} can be shown to vanish after introducing a suitable level structure; it follows that the above map lifts to a \((\Z/p)^{\times}\)--equivariant map of the \(E_\infty\)--rings of the global sections over the moduli with level structure; this descends to a map of global sections over the original module after taking \((\Z/p)^\times\)--fixed points; and one finally produces the map of sheaves by further applications of relative obstruction theory~\cite[Section 8, Step 2]{BehrensConstruction}.
 
 \begin{remark}[{\cite[Section 9]{BehrensConstruction}}]
-\index{arithmetic fracture}Arithmetic fracture is dealt with similarly, but it is \emph{far} simpler.  Because \(\Q \otimes \TMF\) has a smooth \(\Q\)--algebra as its homotopy, the obstructions governing the version of Goerss--Hopkins--Miller for commutative \(H\Q\)--algebras vanish, letting us lift algebraic results into homotopy theory wholesale.
+\index{arithmetic fracture}Arithmetic fracture is dealt with similarly, but it is \emph{far} simpler.  Because \(\Q \otimes \TMF\) has a smooth \(\Q\)--algebra as its homotopy, the Goerss--Hopkins--Miller obstructions governing the existence of maps of commutative \(H\Q\)--algebras vanish, letting us lift algebraic results into homotopy theory wholesale.
 \end{remark}
 
 
