--- a/sigma.tex
+++ b/sigma.tex
@@ -283,7 +283,7 @@ B\SU_E \arrow{r} \arrow[equal]{d} & BU_E \arrow{r}{B\det} \arrow[equal]{d} & BU(
 where the scheme ``\(\SDiv_0 \CP^\infty_E\)'' of \index{divisor!special}\textit{special divisors} is defined to parametrize those divisors which vanish under the summation map.  However, whereas the map \(BU(1)_E \to BU_E\) has an identifiable universal property---it presents \(BU_E\) as the universal formal group on the pointed curve \(BU(1)_E\)---the description of \(B\SU_E\) as a scheme of special divisors does not bear much immediate resemblance to a free object on the special divisor \((1 - [a])(1 - [b])\) classified by \[(\CP^\infty)^{\times 2}_E \xrightarrow{(1 - \L_1)(1 - \L_2)_E} B\SU_E \to BU_E = \Div_0 \CP^\infty_E.\]  Our task is thus exactly to justify this statement.
 
 \begin{definition}\label{DefinitionOfC2G}
-If it exists, let \(C_2 \G\) denote the symmetric square of \(\Div_0 \G\), thought of as a module over the ring scheme \(\Div \G\).  This scheme has the property that a formal group homomorphism \(\phi\co C_2 \G \to H\) is equivalent data to a symmetric function \(\psi\co \G \times \G \to H\) satisfying a rigidity condition (\(\psi(0, 0) = 0\)) and a \(2\)--cocycle condition as in \Cref{TwoCocycleConditionForBSUBundles}.
+If it exists, let \(C_2 \G\) denote the symmetric square of \(\Div_0 \G\), thought of as a module over the ring scheme \(\Div \G\).  This scheme has the property that a formal group homomorphism \(\phi\co C_2 \G \to H\) is equivalent data to a symmetric function \(\psi\co \G \times \G \to H\) satisfying a rigidity condition (\(\psi(0, 0) = 0\)) and a \(2\)--cocycle condition as in \Cref{TwoCocycleConditionForBSUBundles}.\footnote{The short exact sequence \(0 \to I \to \Z[G] \to \Z \to 0\) gives a purely algebraic analogue of the short exact sequence \(0 \to \Div_0 \G \to \Div \G \to \underline{\Z} \to 0\).  The algebro-geometric results of this Lecture (in particular, \Cref{SDivModelsC2}) have direct analogues in the setting of group--rings, which the reader may find more instructive and concrete.}
 \end{definition}
 
 \begin{theorem}[{Ando--Hopkins--Strickland, unpublished}]\label{SDivModelsC2}
@@ -431,10 +431,6 @@ The published proofs of Ando, Hopkins, and Strickland differ substantially from 
 
 \begin{remark}
 Our definition of the scheme \(C_2 \G\) was by the formula \[C_2 \G = \Sym^2_{\Div \G} \Div_0 \G,\] where we are thinking of of \(\Div_0 \G \subseteq \Div \G\) as the augmentation ideal inside of an augmented ring.  The formal schemes \(\Div \G\) and \(\Div_0 \G\) are the formal schemes associated by \(E\)--theory to the infinite loopspaces underlying \(kU\) and \(\Susp^2 kU\) respectively.  Remarking that \(B\SU\) is the infinite loopspace underlying \(\Susp^4 kU\), we arrive at the analogous topological formula \[\Susp^4 kU = (\Susp^2 kU) \sm_{kU} (\Susp^2 kU).\]
-\end{remark}
-
-\begin{remark}
-The short exact sequence \[0 \to I \to \Z[G] \to \Z \to 0\] gives an algebraic analogue of the short exact sequence \[0 \to \Div_0 \G \to \Div \G \to \underline{\Z} \to 0.\]  The results we have pursued here (in particular, \Cref{SDivModelsC2}) have direct analogues in the setting of group--rings.
 \end{remark}
 
 \begin{remark}
