fix slightly off cf. reference about different coordinate patches

--- a/finite.tex
+++ b/finite.tex
@@ -682,7 +682,7 @@ Specialize now to the case of a field \(k\) of characteristic \(p\).  Since the 
 It's worth pointing out how strange all of this is. In Euclidean geometry, open subspaces are always top-dimensional, and closed subspaces can drop dimension.  Here, proper open substacks of every dimension appear, and every nonempty closed substack is \(\infty\)--dimensional (albeit of positive codimension).
 \end{remark}
 
-\begin{remark}
+\begin{remark}\label{DifferentStrokes}
 The results of this section have several alternative forms in the literature.  For instance, there is a second set of coordinates \(v_d\), called the \textit{Hazewinkel generators}, which differ substantially from the Kudo--Araki coordinates favored here though they are just as ``canonical''.  Different coordinate patches are useful for accomplishing different tasks, and the reader would be wise to remain flexible.\footnote{In particular, it is a largely open question whether there is a (partial) coordinate patch that is compatible with the results of \Cref{PowerOpnsSection}, though there are partial results along these lines~\cite{JohnsonNoel,LawsonSecondaryPowerOps,LawsonNaumann,StricklandProductsOnModules}.}\footnote{An unusual set of canonical generators is discussed in~\cite[Section V.10]{LazardCFGs}.}
 \end{remark}
 
