add akhil citation

--- a/main.bib
+++ b/main.bib
@@ -2729,6 +2729,18 @@ MRREVIEWER = {Andrzej Kozlowski},
   publisher={Oxford University Press}
 }
 
+@article{Mathew,
+title = "The Galois group of a stable homotopy theory",
+journal = "Advances in Mathematics",
+volume = "291",
+pages = "403 - 541",
+year = "2016",
+issn = "0001-8708",
+doi = "https://doi.org/10.1016/j.aim.2015.12.017",
+url = "http://www.sciencedirect.com/science/article/pii/S000187081500554X",
+author = "Akhil Mathew",
+}
+
 @article{MNN,
 author = {Mathew, Akhil and Naumann, Niko and Noel, Justin},
 title = {On a nilpotence conjecture of J. P. May},
