fix silly newline

--- a/finite.tex
+++ b/finite.tex
@@ -174,7 +174,7 @@ The \index{completion}\textit{\(E\)--nilpotent completion} of \(X\) is the total
 \end{definition}
 
 \begin{remark}[{\cite[Theorem 1.12]{RavenelLocalizationWRTPeriodic}, \cite{BousfieldLocalization}}]
-Ravenel proves the following generalization of \Cref{DescentFromHFpToHZp}.  Let \(E\) be a connective ring spectrum, let \(J\) be the set of primes complementary to those primes \(p\) for which \(E_*\) is uniquely \(p\)--divisible, and let \(X\) be a connective spectrum.\footnote{Even for connective ring spectra \(E\), the Bousfield localization \(L_E X\) does \emph{not} have to recover an arithmetic localization of \(X\) if \(X\) is not connective.  Take \(E = H\Z\) and \(X = KU\), which Snaith's theorem presents as \(X = KU = \Susp^\infty_+ \CP^\infty[\beta^{-1}]\), where \(\beta\co \CP^1 \to \CP^\infty\) is the Bott element.  This gives \(H\Z_* KU = H\Z_*(\CP^\infty[\beta^{-1}]) = (H\Z_* \CP^\infty)[\beta_1^{-1}]\).  We can identify the pieces in turn: \Cref{HZGivesGa} shows \(\CP^\infty_{H\Z} = \G_a\), so the dual Hopf algebra \((\sheaf O_{\G_a})^* = H\Z_* \CP^\infty\) is a divided polynomial ring on the class \(\beta_1\).  Inverting \(\beta_1\) then gives \((H\Z_* \CP^\infty)[\beta_1^{-1}] = \Gamma[\beta_1][\beta_1^{-1}] = \Q[\beta_1^\pm]\), so that, in particular, there is a weak equivalence \(H\Z \sm KU \to H\Q \sm KU\).  The cofiber \(KU \to KU \otimes \Q \to KU \otimes \Q/\Z\) is thus a nonzero \(H\Z\)--acyclic spectrum.  You can also work this example without knowing Snaith's theorem: since \(\Susp^\infty_+ \CP^\infty[\beta^{-1}] \to KU\) is a map of ring spectra, \(\pi_0 \Susp^\infty_+ \CP^\infty[\beta^{-1}]\) cannot be a rational group, as \(\pi_0 KU = \Z\).  Another entertaining consequence of this is \(D(KU/p) = F(KU/p, \S) = 0\), since $\S$ is $H\Z$--local.}  If each element of \(E_*\) has finite order, then \(X^\wedge_E = X^\wedge_J\) gives the arithmetic completion of \(X\)---which we reinterpret as \(\S^\wedge_J \to E\) being of effective descent for connective objects.  Otherwise, if \(E_*\) has elements of infinite order, then \(X^\wedge_E = X_{(J)}\) gives the arithmetic localization---which we reinterpret as saying that \(\S_{(J)} \to E\) is of effective descent.  Finding more encompassing conditions on maps of \(E_\infty\)--rings for which descent holds is a subject of serious study~\cite{Mathew}, \cite[Appendix D]{LurieSAG}.
+Ravenel proves the following generalization of \Cref{DescentFromHFpToHZp}.  Let \(E\) be a connective ring spectrum, let \(J\) be the set of primes complementary to those primes \(p\) for which \(E_*\) is uniquely \(p\)--divisible, and let \(X\) be a connective spectrum.\footnote{Even for connective ring spectra \(E\), the Bousfield localization \(L_E X\) does \emph{not} have to recover an arithmetic localization of \(X\) if \(X\) is not connective.  Take \(E = H\Z\) and \(X = KU\), which Snaith's theorem presents as \(X = KU = \Susp^\infty_+ \CP^\infty[\beta^{-1}]\), where \(\beta\co \CP^1 \to \CP^\infty\) is the Bott element.  This gives \(H\Z_* KU = H\Z_*(\CP^\infty[\beta^{-1}]) = (H\Z_* \CP^\infty)[\beta_1^{-1}]\).  We can identify the pieces in turn: \Cref{HZGivesGa} shows \(\CP^\infty_{H\Z} = \G_a\), so the dual Hopf algebra \((\sheaf O_{\G_a})^* = H\Z_* \CP^\infty\) is a divided polynomial ring on the class \(\beta_1\).  Inverting \(\beta_1\) then gives \((H\Z_* \CP^\infty)[\beta_1^{-1}] = \Gamma[\beta_1][\beta_1^{-1}] = \Q[\beta_1^\pm]\), so that, in particular, there is a weak equivalence \(H\Z \sm KU \to H\Q \sm KU\).  The cofiber \(KU \to KU \otimes \Q \to KU \otimes \Q/\Z\) is thus a nonzero \(H\Z\)--acyclic spectrum.  You can also work this example without knowing Snaith's theorem: since \(\Susp^\infty_+ \CP^\infty[\beta^{-1}] \to KU\) is a map of ring spectra, \(\pi_0 \Susp^\infty_+ \CP^\infty[\beta^{-1}]\) cannot be a rational group, as \(\pi_0 KU = \Z\).  Another entertaining consequence of this is \(D(KU/p) = F(KU/p, \S) = 0\), since $\S$ is $H\Z$--local.}  If each element of \(E_*\) has finite order, then \(X^\wedge_E = X^\wedge_J\) gives the arithmetic completion of \(X\)---which we reinterpret as \(\S^\wedge_J \to E\) being of effective descent for connective objects.  Otherwise, if \(E_*\) has elements of infinite order, then \(X^\wedge_E = X_{(J)}\) gives the arithmetic localization---which we reinterpret as saying that \(\S_{(J)} \to E\) is of effective descent.  Finding more encompassing conditions for which descent holds is an active subject of research~\cite{Mathew}, \cite[Appendix D]{LurieSAG}.
 \end{remark}
 
 Finally, we can interrelate these algebraic and topological notions of descent by studying the coskeletal filtration spectral sequence\footnote{The reader who would like a refresher about the construction of spectral sequences is referred to Boardman's exceptional article~\cite{BoardmanConditionallyConvergent}.} for \(\pi_* X^\wedge_E\), which we define to be the \index{Adams spectral sequence}\textit{\(E\)--Adams(--Novikov) spectral sequence} for \(X\).  Applying the homotopy groups functor to the cosimplicial ring spectrum \(\mathcal D_E\) gives a cosimplicial ring \(\pi_* \mathcal D_E\), which we would like to connect with an algebraic descent object of the sort considered in \Cref{StrictCechDescentRemark}.  In order to make this happen, we need two niceness conditions on \(E\):
