clarify some Greek letter element confusion

--- a/finite.tex
+++ b/finite.tex
@@ -1368,7 +1368,7 @@ Take \(k\) to be a perfect field of positive characteristic \(p\), and take \(\G
 \end{center}
 At odd primes, this turns out to be the \(v_1\)--self-map \(v\co M_{2(p-1)}(p) \to M_0(p)\) announced in \Cref{AdamsSelfMapThm} (cf.\ also \cite[Proposition 12.7]{AdamsJXIV}).\index{vd self map@\(v_d\)--self--map}
 
-This admits many generalizations.  First, different powers \(v_1^j\) of the section \(v_1\) also give rise to homotopy elements \(\alpha_{j/1} \in \pi_{2(p-1)j} M_0(p)\).  These have varying orders of divisibility, and we write \(\alpha_{j/k}\) for a homotopy element satisfying \(p^{k-1} \alpha_{j/k} = \alpha_{j/1}\).\footnote{The incarnation of these elements in \(\G_m\)--local homotopy are exactly the elements witnessed by the invariant function \(u^{2(p-1)k}\) in \Cref{piLK1SExample}.}  Additionally, each Moore spectrum supports an Adams \(v_1\)--self--map of the form \[v(p^j) \co M_{|v_1| p^{j-1}}(p^j) \to M_0(p^j),\] which collectively form commutative diagrams of the shape
+This admits many generalizations.  First, different powers \(v_1^j\) of the section \(v_1\) also give rise to homotopy elements \(\alpha_{j/1} \in \pi_{2(p-1)j} M_0(p)\) (though their Hurewicz images no longer uniquely specify them).  These have varying orders of divisibility, and we write \(\alpha_{j/k}\) for a homotopy element satisfying \(p^{k-1} \alpha_{j/k} = \alpha_{j/1}\).\footnote{The incarnation of these elements in \(\G_m\)--local homotopy are exactly the elements witnessed by the invariant function \(u^{2(p-1)k}\) in \Cref{piLK1SExample}.}  Additionally, each Moore spectrum supports an Adams \(v_1\)--self--map of the form \[v(p^j) \co M_{|v_1| p^{j-1}}(p^j) \to M_0(p^j),\] which collectively form commutative diagrams of the shape
 \begin{center}
 \begin{tikzcd}[row sep=1.2em]
 M_{p \cdot |v_1| p^{j-1}}(p^j) \arrow["v(p^j)^p"]{r} \arrow{d} & M_0(p^j) \arrow{d} \\
@@ -1383,7 +1383,7 @@ In the broader literature, the phrase ``Greek letter elements'' typically refers
 \end{remark}
 
 \begin{remark}[{\cite{AdamsAtiyah}, \cite[Section 5.2]{RavenelGreenBook}}]
-The second solution of the Hopf invariant one problem, due to Adams and Atiyah, can be rephrased in this language.  As discussed in \Cref{HopfInvariant1ExampleMO}, the ``Hopf invariant one problem'' refers to the question of whether the \(1\)--cocycles \(h_j\) in the \(\HFtwo\)--Adams spectral sequence are permanent cycles, thereby producing stable homotopy classes.  The orientation \(BP \to \HFtwo\) induces a map of Adams spectral sequences, so that if \(h_j\) were to survive to detect a class, that class would also be present in the \(BP\)--Adams spectral sequence, and its filtration degree would be not more than that of \(h_j\), which lies in degree \(1\).  In turn, the \(BP\)--Adams \(E_2\)--term can be computed by an ad\`elic complex~\cite{BeilinsonAdeles,Huber}, which is itself the target of a \v{C}ech-type spectral sequence known internally to chromatic homotopy theory as the \textit{chromatic spectral sequence}\index{chromatic spectral sequence}~\cite[Section 3]{MRW}, \cite[Equation 4.60]{Wilson}: \[E^2_{*,*,d} = H^*(\moduli{fg}; v_d^{-1} BP_* / (p^\infty, v_1^\infty, \ldots, v_{d-1}^\infty)\widetilde{\quad}) \Rightarrow H^*(\moduli{fg} \times \Spec \Z_{(p)}).\]  The \(1\)--line of this spectral sequence is entirely governed by \Cref{piLK1SExample}, and by finishing the even--primary form of that calculation, one discovers that the \(2\)--divisibilities of the elements \(\alpha_{j > 4}\) are too low to produce \emph{any} classes on the classical Adams \(1\)--line (cf.\ \Cref{ANSS2Figure}).  It follows that the elements \(h_{j > 3}\) cannot be permanent cycles, lest they contribute to a contradiction.
+The second solution of the Hopf invariant one problem, due to Adams and Atiyah, can be rephrased in this language.  As discussed in \Cref{HopfInvariant1ExampleMO}, the ``Hopf invariant one problem'' refers to the question of whether the \(1\)--cocycles \(h_j\) in the \(\HFtwo\)--Adams spectral sequence are permanent cycles, thereby producing stable homotopy classes.  The orientation \(BP \to \HFtwo\) induces a map of Adams spectral sequences, so that if \(h_j\) were to survive to detect a class, that class would also be present in the \(BP\)--Adams spectral sequence, and its filtration degree would be not more than that of \(h_j\), which lies in degree \(1\).  In turn, the \(BP\)--Adams \(E_2\)--term can be computed by an ad\`elic complex~\cite{BeilinsonAdeles,Huber}, which is itself the target of a \v{C}ech-type spectral sequence known internally to chromatic homotopy theory as the \textit{chromatic spectral sequence}\index{chromatic spectral sequence}~\cite[Section 3]{MRW}, \cite[Equation 4.60]{Wilson}: \[E^2_{*,*,d} = H^*(\moduli{fg}; v_d^{-1} BP_* / (p^\infty, v_1^\infty, \ldots, v_{d-1}^\infty)\widetilde{\quad}) \Rightarrow H^*(\moduli{fg} \times \Spec \Z_{(p)}).\]  The \(1\)--line of this spectral sequence is entirely governed by \Cref{piLK1SExample}, and by finishing the even--primary form of that calculation, one discovers that the \(2\)--divisibilities of the elements \(\alpha_{j > 4}\) are too low to produce \emph{any} classes on the classical Adams \(1\)--line (cf.\ \Cref{ANSS2Figure}).  It follows that the elements \(h_{j > 3}\) cannot be permanent cycles, lest they contribute to a contradiction.\footnote{As an aside, the Greek letter elements are completely well-defined on the pages of this spectral sequence.  The indeterminacy in viewing them as elements of homotopy groups comes entirely from the filtration effects of this spectral sequence and the ensuing \(BP\)--Adams spectral sequence.}
 \end{remark}
 
 \begin{remark}
