clarify why BP_* satisfies LEFT

--- a/finite.tex
+++ b/finite.tex
@@ -976,7 +976,7 @@ If \(f^* \context{MU}(X)\) defines a homology functor \(R_0(X)\), then \({f'}^* 
 \begin{definition}\label{DefnChromaticHomologyThys}
 Coupling \Cref{LEFTRealTheoremWithProof} to our understanding of \(\moduli{fg}\), we produce many interesting homology theories, collectively referred to as \textit{chromatic\footnote{The elements of \Cref{ANSS2Figure} and \Cref{ANSS3Figure} are related to each other by ``\(v_d\)--multiplication'' (cf.\ \Cref{GreekLetterElements}), and families of such elements can be selected for by inverting \(v_d\), i.e., by passing to the open substack \(\moduli{fg}^{\le d}\).  The word ``chromatic'' here thus refers to an analogy: this localization selects certain periodic families of elements, like a bandpass filter selects certain frequencies out of a complicated radio signal.} homology theories}:
 \begin{itemize}
-\item Recall that the moduli of \(p\)--typical group laws is affine, presented in \Cref{KudoArakiIsomorphism} by \[\sheaf O_{\moduli{fgl}^{\ptyp}} \cong \Z_{(p)}[v_1, v_2, \ldots, v_d, \ldots].\]  Since the inclusion of \(p\)--typical group laws into all group laws induces an equivalence of stacks, it is in particular flat, and hence this formula determines a homology theory on finite spectra, called \index{Brown Peterson homology@Brown--Peterson homology}\textit{Brown--Peterson homology}: \[BPP_0(X) := MUP_0(X) \otimes_{MUP_0} BPP_0.\]
+\item Recall that the moduli of \(p\)--typical group laws is affine, presented in \Cref{KudoArakiIsomorphism} by \[\sheaf O_{\moduli{fgl}^{\ptyp}} \cong \Z_{(p)}[v_1, v_2, \ldots, v_d, \ldots].\]  This tautologically satisfies the regularity condition in Landweber's theorem, but it can also be seen to satisfy the desired flatness condition: the moduli of \(p\)--typical group laws is a flat cover of its quotient by \(p\)--typical coordinate changes, and since the inclusion of \(p\)--typical group laws into all group laws induces an equivalence of stacks, the moduli of \(p\)--typical group laws determines a flat cover of \(\moduli{fg}\).  This therefore determines a homology theory on finite spectra, called \index{Brown Peterson homology@Brown--Peterson homology}\textit{Brown--Peterson homology}: \[BPP_0(X) := MUP_0(X) \otimes_{MUP_0} BPP_0.\]
 \item A chart for the open substack \(\moduli{fg}^{\le d}\) in terms of \(\moduli{fgl}^{\ptyp}\) was given in \Cref{OpenSubstacksOfMfg} by \(\Spec \Z_{(p)}[v_1, v_2, \ldots, v_d^\pm]\).  Since open maps are in particular flat, it follows that there is a homology theory \(EP(d)\), called \index{Johnson--Wilson homology}\textit{the \(d\){\th} Johnson--Wilson homology}, defined on all spectra by \[EP(d)_0(X) := MUP_0(X) \otimes_{MUP_0} \Z_{(p)}[v_1, v_2, \ldots, v_d^\pm].\]
 \item Similarly, for a formal group \(\Gamma\) of height \(d < \infty\) over a field \(k\), we produced in \Cref{LubinTateModuliThm} a chart \(\Spf \W_p(k)\ps{u_1, \ldots, u_{d-1}}\) for its deformation neighborhood.  Since inclusions of deformation neighborhoods of substacks of Noetherian stacks are flat~\cite{Matsumura}, there is a corresponding homology theory \(E_\Gamma{}\), called \index{Morava E theory@Morava \(E\)--theory}\textit{the (discontinuous) Morava \(E\)--theory for \(\Gamma\)}, determined by \[E_\Gamma{}_0(X) := MUP_0(X) \otimes_{MUP_0} \W_p(k)\ps{u_1, \ldots, u_{d-1}}[u^\pm].\]  In the case that \(\Gamma = \Gamma_d\) is the Honda formal group of height \(d\) over \(\F_p\), the notation is often abbreviated from \(E_{\Gamma_d}\) to merely \(E_d\).
 \item Since \(\mathfrak m = (p, u_1, \ldots, u_{d-1})\) is a regular ideal in \(E_\Gamma{}_*\), we can use the \(MU\)--module structure of \(E_\Gamma\) to model the reduction to the special fiber by way of the cofiber sequences
